# maths-for-cs-ai

./: .gitignore  CLAUDE.md  README.md  TODO.md  index.html
api/: learning-paths.json  search-index.json  tiers.json
assets/: index-BkJIzV5B.css  index-BqygouXL.js  index-DP04akjj.js  index-lmPnzpMr.css
backend/: main.py  pyproject.toml  requirements.txt
classical-references/: joseph-ray.md
docs/: arch.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Layout.tsx  app.css  index.css  index.tsx  layout.tsx
references/: curriculum-expansion-plan.md  mathacademy.md
references/agenda/: overall-syllabus.md
scripts/: build-static.py  deploy-gh-pages.sh
tutorials/: jee-curriculum.json  learning-paths.json  ml-curriculum.json
tutorials/foundation-1/: 01-surds-indices-logarithms.md  02-algebraic-manipulation.md  04-inequalities.md  06-function-notation.md  07-linear-functions.md  11-absolute-value.md  12-exponent-rules-mastery.md
tutorials/foundation-2/: 01-cartesian-plane.md  04-logarithmic-functions.md  05-coordinate-geometry.md  06-basic-trigonometry.md  07-function-composition-inverses.md  09-piecewise-functions.md
tutorials/foundation-3/: 01-polynomial-long-division.md  03-polynomial-division.md  04-radical-functions.md  05-exponential-logarithmic-equations.md  06-sequences-series.md  08-matrices-introduction.md  09-summation-notation.md  10-mathematical-thinking.md
tutorials/foundation-4/: 04-trig-identities.md  07-complex-numbers.md
tutorials/supplementary-applied/: 01-kinematics-suvat.md  (+4 more)
(+1170 files in other folders)
