[project]
name = "backend"
version = "0.1.0"
description = "Maths for CS — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "markdown>=3.10.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
